# seleniumuser

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: index.html  search.js  seleniumuser.html
docs/seleniumuser/: seleniumuser.html
src/seleniumuser/: __init__.py  seleniumuser.py
tests/: test_seleniumuser.py
