[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seleniumuser"
authors = [{name="Matt Manes"}]
description = "Selenium wrapper to streamline usage."
version = "1.1.2"
requires-python = ">=3.10"
dependencies = ["bs4", "selenium==4.5.0", "noiftimer", "voxscribe", "whosyouragent"]
keywords = [
    "selenium",
    "automation",
    "webscraping"
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/matt-manes/seleniumuser"
"Documentation" = "https://github.com/matt-manes/seleniumuser/tree/main/docs"
"Source code" = "https://github.com/matt-manes/seleniumuser/tree/main/src/seleniumuser"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[tool.hatch.build.targets.sdist]
exclude = [
    ".coverage",
    ".pytest_cache",
    ".vscode",
    "tests",
    "htmlcov",
    "docs",
    "*log*",
    "*.md"
]