[project]
name = "seleniumuser"
description = "Selenium wrapper to streamline usage."
version = "1.1.3"
dependencies = ["bs4", "selenium==4.5.0", "noiftimer", "voxscribe", "whosyouragent", "beautifulsoup4"]
readme = "README.md"
keywords = ["selenium", "automation", "webscraping"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
requires-python = ">=3.10"

[[project.authors]]
name = "Matt Manes"
email = ""

[project.urls]
Homepage = "https://github.com/matt-manes/seleniumuser"
Documentation = "https://github.com/matt-manes/seleniumuser/tree/main/docs"
"Source code" = "https://github.com/matt-manes/seleniumuser/tree/main/src/seleniumuser"

[project.scripts]

[tool]
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.hatch.build.targets.sdist]
exclude = [".coverage", ".pytest_cache", ".vscode", "tests", "htmlcov", "docs", "*log*", "*.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
